tests/ui/suggestions/issue-112958.stderr
error[E0308]: mismatched types
  --> $DIR/issue-112958.rs:4:17
   |
LL |     let _ = a < b;
   |                 ^ expected `&mut _`, found integer
   |
   = note: expected mutable reference `&mut _`
                           found type `{integer}`
help: consider dereferencing here
   |
LL |     let _ = *a < b;
   |             +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
